syntax = "proto3";

package chat_service;

service ChatService {
    rpc join(User) returns (JoinResponse) {}
    rpc send(Chat) returns (Empty) {}
    rpc receive(Empty) returns (stream Chat) {}
    rpc getUsers(Empty) returns (UserList) {}
}

message Chat {
    string id = 1;
    string user_id = 2;
    string room_id = 3;
    string message = 4;
    int64 created_at = 5;
}

message User {
    string id = 1;
    string name = 2;
}

message Room {
    string id = 1;
    int64 created_at = 2;
}

message Empty {
}

message UserList {
    repeated User users = 1;
}

message JoinResponse {
    int32 error = 1;
    string message = 2;
}
